# codi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/codi/: __init__.py  __main__.py  bot.py  config.py
src/codi/cogs/: __init__.py  crypto.py  wooloo.py
src/codi/data/: __init__.py  uplift_quotes.py
src/codi/personalities/: __init__.py  base.py  codi.py  wooloo.py
src/codi/services/: __init__.py  anthropic_ai.py  crypto_api.py  pokemon_api.py
tests/: test_anthropic_ai.py  test_crypto_api.py  test_legacy_return.py  test_personalities.py  test_pokemon_api.py  test_uplift.py  test_wooloo_helpers.py
